maze.lessons.maze.island.IslandMaze.scala.error
Escaper:25: error: too many arguments for method getDirection: ()plm.universe.Direction
	getDirection(NORD)
                    ^