maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
def keepHandOnSideWall(){
	gauche()
	if (estFaceMur){
		droite()
		if (estFaceMur){
			droite()
			if(estFaceMur){
				droite()
			}else{
				avance
			}
		}else{
		avance()	
		}
		
	} else{
		avance()
	}

	
}
while(!estSurBiscuit){
	getDirection(NORD)

if(estFaceMur){
	keepHandOnSideWall()
}else{
	avance()
}
}
prendBiscuit()
}